feat: Add GitHub Actions step to create release and upload assets
This commit introduces a new job in the GitHub Actions workflow to create a release and upload build assets. The job uses the `softprops/action-gh-release` action to tag the release and include the necessary files, enhancing the release process.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,3 +85,12 @@ jobs:
         with:
           path: build/*
           retention-days: 1
+
+      - name: Create Release and Upload Assets
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          files: build/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
