chore: Update GitHub Actions workflow to trigger on all branches and enhance release process
This commit modifies the GitHub Actions workflow to trigger on any push to branches instead of specific tags. It also adds a new job for creating a GitHub release, which includes steps for checking out the code, downloading build artifacts, and creating the release with the uploaded assets.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: release
 
 on:
-  push:
-    tags:
-      - "v*"
-      - "v*-*"
+  push:  # 任何 push 都会触发工作流
+    branches:
+      - '**'
 
 permissions:
   contents: write
@@ -35,48 +34,40 @@ jobs:
         with:
           script: |
             const rawTag = '${{ github.ref_name }}';
-            const version = rawTag.replace(/^v/, ''); // Remove the leading 'v' if present
-            console.log(`Version: ${version}`);
+            const version = rawTag.replace(/^v/, '');
             core.setOutput('version', version);
 
       - name: Build Binary
         run: |
           targets=(
-              # Windows (amd64)
+              "darwin amd64 _amd64 macOS"
+              "darwin arm64 _arm64 macOS"
               "windows amd64 .exe Windows"
-              # Windows (386)
               "windows 386 _i386.exe Windows"
           )
           mkdir -p build
 
-          # 遍历所有平台
           for entry in "${targets[@]}"; do
             (
-              # 拆分字符串
               IFS=' ' read -r -a parts <<< "$entry"
               os="${parts[0]}"
               arch="${parts[1]}"
               suffix="${parts[2]}"
               display_os="${parts[3]}"
               log_prefix="[${os}-${arch}]"
-              # 构建目标目录
               target_dir="dist/${os}_${arch}"
               mkdir -p "$target_dir"
-              # 使用 xgo 构建
               echo "${log_prefix} 🚀 Building for $os/$arch..."
               xgo \
                   --targets="$os/$arch" \
                   --out "krillinai_desktop" \
                   --dest "$target_dir" \
                   ./cmd/desktop 2>&1 | sed "s/^/${log_prefix} /"
-              # 生成最终二进制文件名日志输
               binary_name="KrillinAI_${{ steps.version.outputs.version }}_Desktop_${display_os}${suffix}"
-              # 移动并重命名文件
               mv "$target_dir"/krillinai_desktop* "build/$binary_name"
               echo "${log_prefix} ✅ Built: build/$binary_name"
             ) &
           done
-          
           wait
           echo "✨ All concurrent tasks completed!"
 
@@ -86,11 +77,24 @@ jobs:
           path: build/*
           retention-days: 1
 
-      - name: Create Release and Upload Assets
+  release:
+    needs: build-desktop
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: build
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          name: Release ${{ github.ref_name }}
           files: build/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
