chore: Update GitHub Actions workflow to trigger on version tags for releases
This commit modifies the GitHub Actions workflow to trigger only on pushes to version tags (e.g., "v*" and "v*-*"), enhancing the release process by ensuring that releases are created specifically for tagged versions.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: release
 
 on:
-  push:  # 任何 push 都会触发工作流
-    branches:
-      - '**'
+  push:
+    tags:
+      - "v*"
+      - "v*-*"
 
 permissions:
   contents: write
