--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,24 +78,48 @@ jobs:
           path: build/*
           retention-days: 1
 
-  release:
+  goreleaser:
     needs: build-desktop
+    if: always() # 如果您希望仅在 build-desktop 成功时运行，可以改为 if: success()
     runs-on: ubuntu-latest
     steps:
+      # QEMU 和 Buildx 主要用于 Docker 构建，如果仅发布到 GitHub Releases，则不再需要
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
+
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # GoReleaser 需要完整的 git 历史来生成changelog
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          path: build
+          name: desktop-binaries # 使用上传时指定的 artifact 名称
+          path: build # 将二进制文件下载到 build 目录，以便 GoReleaser 可以找到它们
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          tag_name: ${{ github.ref_name }}
-          files: build/*
+          go-version-file: "go.mod"
+
+      # 移除了 Docker Hub 登录步骤
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # DOCKER_USERNAME 环境变量也不再需要
+          # DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
