chore: Add explicit name for desktop binaries artifact in release workflow
This commit updates the GitHub Actions workflow by adding a clear name for the desktop binaries artifact, improving clarity and organization in the release process.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
+          name: desktop-binaries # 给 artifact 一个明确的名称
           path: build/*
           retention-days: 1
 
