--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: build
+    needs: goreleaser
     if: always()
     steps:
       - name: Send ntfy notification
