--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,13 +126,15 @@ jobs:
           # DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
   notify:
-    runs-on: ubuntu-latest
-    needs: goreleaser
-    if: always()
-    steps:
-      - name: Send ntfy notification
-        uses: ./.github/workflows/ntfy-notify.yml@main
-        with:
-          status: ${{ needs.build.outputs.build_status }}
-        secrets: inherit # 这样会自动传递 NTFY_SERVER_URL, NTFY_TOPIC_NAME, NTFY_ACCESS_TOKEN
-                        # (如果它们在调用方仓库/组织的 secrets 中存在)
+      runs-on: ubuntu-latest
+      needs: goreleaser # 依赖 goreleaser job
+      if: always()
+      steps:
+        - name: Send ntfy notification
+          uses: ./.github/workflows/ntfy-notify.yml@main
+          with:
+            status: ${{ needs.goreleaser.result }} # <--- 修正这里！从 goreleaser 获取 result
+            # 可选：为了更丰富的通知内容，你可以添加这些
+            branch_name: ${{ github.ref_name }} # 标签名
+            commit_message: "Release ${{ github.ref_name }} status: ${{ needs.goreleaser.result }}"
+          secrets: inherit
